# lucia_navigation2

./: CMakeLists.txt  README.md  nav2_test.py  package.xml  setup.cfg  setup.py
launch/: navigation2.launch.py  navigation_launch.py  rviz2_only.launch.py  simple_navigation.launch.py
map/: map.yaml  map_e3.pgm  map_e3.yaml
param/: lucia.yaml  lucia_advanced.yaml  lucia_feature.yaml  lucia_test_plannner_plugin.yaml  nav2_minimal.yaml  nav2_params.yaml  waffle.yaml
params/: nav2_params.yaml
rviz/: simple_nav2.rviz  tb3_navigation2.rviz
tf2_tools_view/: frames_2025-04-11_11.34.30.gv  frames_2025-04-11_18.43.20.gv  frames_2025-04-22_18.50.56.gv
