<?xml version="1.0"?>
<package format="3">
  <name>lucia_navigation2</name>
  <version>0.0.1</version>
  <description>ROS 2 launch scripts for navigation2</description>
  <maintainer email="">Haruki Isono</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
